# ml-forecast-system

./: .dvcignore  .env.example  .gitignore  MLOps_Complete_Setup_Guide.md  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  session_STUDENT_GETTING_STARTED_GUIDE.md
.dvc/: config
.github/scripts/: __init__.py  register_model.py  validate_data.py
.github/workflows/: ml-pipeline.yml
app/: backend.py  dashboard.py
data/raw/: .gitkeep  sales_data.csv.dvc
scripts/: generate_data.py  rollback.py
src/: __init__.py  evaluate.py  preprocess.py  train.py  utils.py
tests/: test_api.py  test_data.py  test_model.py
