[project]
name = "session-8-ml-forecast-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "boto3>=1.42.9",
    "dvc>=3.64.2",
    "fastapi>=0.124.4",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pip>=25.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
